[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/Art Pack/Enemy_3_Neon.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/58469c62cef1014c0b5e47f6.png" type="Texture" id=2]
[ext_resource path="res://scripts/Ennemi1.gd" type="Script" id=3]
[ext_resource path="res://scenes/BalleEnnemis.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sons/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sons/enemy_death_01.wav" type="AudioStream" id=6]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 554.231

[node name="Gros" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 3 )
balle = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 80, 0 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 80, -40 )
rotation = -0.174533

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 80, 40 )
rotation = 0.174533

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -92.016, 0 )
rotation = -1.5708
scale = Vector2( 0.07, 0.07 )
emitting = false
lifetime = 1.5
one_shot = true
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -61.0771, 32.6959, -61.0771, -30.329, -49.7326, -59.9507, 59.3004, -47.976, 61.1912, 45.9311, -47.8419, 60.4268 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.60999, 0.902496 )
shape = SubResource( 2 )

[node name="Pewpew" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Mort" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
