[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/Art Pack/Enemy_1_Neon.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/58469c62cef1014c0b5e47f6.png" type="Texture" id=2]
[ext_resource path="res://scripts/Ennemi1.gd" type="Script" id=3]
[ext_resource path="res://scenes/BalleEnnemis.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sons/shoot.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sons/enemy_death_01.wav" type="AudioStream" id=6]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=2]
radius = 355.706

[node name="Mini" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 16
script = ExtResource( 3 )
balle = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -9.1295, -19.287, 3.42603, -7.31544, 10.7258, -7.02345, 22.6973, -0.891685, 10.7258, 6.70004, 4.01001, 7.28401, -8.83751, 21.0075, -11.1734, 11.0799, -18.4732, 5.24009, -19.3491, -3.51958, -11.1734, -10.2353 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 26.863, 0 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -39.7105, 1.45994 )
rotation = -1.5708
scale = Vector2( 0.05, 0.05 )
emitting = false
lifetime = 1.5
one_shot = true
speed_scale = 1.5
explosiveness = 0.1
randomness = 1.0
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="Pewpew" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Mort" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
